Memperbaiki backend teknisi, memodifikasi layout scan camera.

--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -10,13 +9,46 @@
         android:layout_height="wrap_content"
         android:background="@color/white">
 
-        <com.google.android.material.appbar.MaterialToolbar
-            android:id="@+id/topAppBar"
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            app:title="Pindai Gambar"
-            app:titleCentered="true" />
+            android:layout_height="wrap_content">
 
+            <com.google.android.material.appbar.MaterialToolbar
+                android:id="@+id/topAppBar"
+                android:layout_width="0dp"
+                android:layout_height="?attr/actionBarSize"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/tv_camera_upload"
+                app:layout_constraintStart_toEndOf="@+id/tv_camera_batal"
+                app:layout_constraintTop_toTopOf="parent"
+                app:title="Pindai Gambar"
+                app:titleCentered="true" />
+
+            <TextView
+                android:id="@+id/tv_camera_upload"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="16dp"
+                android:text="@string/camera_upload"
+                android:textColor="@color/purple"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="@+id/topAppBar"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/topAppBar" />
+
+            <TextView
+                android:id="@+id/tv_camera_batal"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:text="@string/camera_batal"
+                android:textColor="@color/purple"
+                android:textStyle="bold"
+                app:layout_constraintBaseline_toBaselineOf="@+id/tv_camera_upload"
+                app:layout_constraintStart_toStartOf="parent" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
     </com.google.android.material.appbar.AppBarLayout>
 
 
@@ -34,23 +66,23 @@
             android:layout_marginEnd="24dp"
             android:layout_marginBottom="32dp"
             app:cardCornerRadius="16dp"
-            app:layout_constraintBottom_toTopOf="@+id/imageView"
+            app:layout_constraintBottom_toTopOf="@+id/iv_camera_capture"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
             <androidx.camera.view.PreviewView
-                android:id="@+id/viewFinder"
+                android:id="@+id/vf_camera_container"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
         </androidx.cardview.widget.CardView>
 
         <ImageView
-            android:id="@+id/imageView"
+            android:id="@+id/iv_camera_capture"
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:layout_marginBottom="48dp"
-            android:contentDescription="Ambil Gambar"
+            android:contentDescription="@string/camera_ambil_gambar"
             android:src="@drawable/capture_camera"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
