--- a/app/src/main/res/layout/fragment_myorder.xml
+++ b/app/src/main/res/layout/fragment_myorder.xml
@@ -3,7 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.Order.MyorderFragment">
 
     <androidx.recyclerview.widget.RecyclerView
@@ -11,6 +10,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="16dp"
-        />
+        tools:listitem="@layout/item_my_order" />
 
 </FrameLayout>
