--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -38,5 +38,7 @@
     <style name="ButtonLogin" parent="ThemeOverlay.Material3.Button">
         <item name="backgroundTint">@color/purple</item>
         <item name="android:radius">10dp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">@color/white</item>
     </style>
 </resources>
