--- a/app/src/main/res/layout/activity_detail_order.xml
+++ b/app/src/main/res/layout/activity_detail_order.xml
@@ -258,7 +258,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="4dp"
-                        app:text="4.8"
+                        android:text="4.8"
                         android:textColor="@color/white"
                         android:textSize="11sp"
                         app:layout_constraintBottom_toBottomOf="@+id/imageView3"
