--- a/app/src/main/res/layout/fragment_finishorder.xml
+++ b/app/src/main/res/layout/fragment_finishorder.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".FinishorderFragment">
+    tools:context="ui.Order.FinishorderFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_finish_order"
@@ -11,5 +11,9 @@
         android:layout_height="match_parent"
         android:layout_marginTop="16dp"
         />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/pemesanan_selesai"/>
 
 </FrameLayout>
