--- a/app/src/main/res/layout/activity_booking.xml
+++ b/app/src/main/res/layout/activity_booking.xml
@@ -288,6 +288,7 @@
                         app:layout_constraintTop_toBottomOf="@+id/jenis_layanan">
 
                         <EditText
+                            android:id="@+id/desc_tugas"
                             android:layout_width="match_parent"
                             android:layout_height="80dp"
                             android:autofillHints=""
