--- a/app/src/main/res/layout/fragment_finishorder.xml
+++ b/app/src/main/res/layout/fragment_finishorder.xml
@@ -10,6 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="16dp"
+        tools:listitem="@layout/item_finish_order"
         />
     <TextView
         android:layout_width="wrap_content"
