menambah onviewcreated di DashboardFragment.kt agar terlihat tablayoutnya

--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -27,8 +27,8 @@
         android:id="@+id/tabs"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/purple"
-        app:tabTextColor="@color/white"
+        android:background="@color/white"
+        app:tabTextColor="@color/purple"
         />
 
     <androidx.viewpager2.widget.ViewPager2
